<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.main.MainActivity">

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:strokeColor="@color/card_stroke_color">

            <EditText
                android:id="@+id/name_edit_text"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/name"
                android:inputType="textCapSentences"
                android:singleLine="true"
                android:textColor="@color/on_background"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:strokeColor="@color/card_stroke_color">

            <EditText
                android:id="@+id/argument_1"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/argument_1"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/on_background"
                android:textSize="16sp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Large"
            app:strokeColor="@color/card_stroke_color">

            <EditText
                android:id="@+id/argument_2"
                style="@style/Widget.Material3.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/argument_2"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/on_background"
                android:textSize="16sp" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/add"
            android:textColor="@color/on_button_color"
            app:backgroundTint="@color/button_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/display_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/display_text"
            android:textColor="@color/on_button_color"
            app:backgroundTint="@color/button_color" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/clear_text"
            android:textColor="@color/on_button_color"
            app:backgroundTint="@color/button_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/on_background"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textAlignment="textEnd"
                android:textColor="@color/on_background"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sum"
                android:textColor="@color/on_background"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/label_sum_of_args"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="@color/on_background"
                android:textSize="24sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>